
    [ SPEC / BUG FIXES ]
    - don't set binmode on STDOUT/STDERR/STDIN if a none standard layer
      is already set on them on none UNIX platforms (RT #57524)
    - make XForms:Model data accesible through POSTDATA/PUTDATA param
      (RT #75628)
    - prevent corruption of POSTDATA/PUTDATA when -utf8 flag is used and use
      tempfiles to handle this data (RT #79102, thanks anonymous)

4.04 2014-09-04

    [ RELEASE NOTES ]
    - this release removes some long deprecated modules/functions and
      includes refactoring to the temporary file handling in CGI.pm. if
      you are doing anything out of the ordinary with regards to temp
      files you should test your code before deploying this update as
      temp files may no longer be stored in previously used locations

    [ REMOVED / DEPRECATIONS ]
    - startform and endform methods removed (previously deprecated, you
      should be using the start_form and end_form methods)
    - both CGI::Apache and CGI::Switch have been removed as these modules
      1) have been deprecated for *years*, and 2) do nothing whatsoever

    [ SPEC / BUG FIXES ]
    - handle multiple values in X-Forwarded-Host header, we follow the
      logic in most other frameworks and take the last value from the list
      (RT #54487)
    - reverse the order of TEMP dir placement for WINDOWS: TEMP > TMP > WINDIR
      (RT #71799, thanks to jeff@math.tntech.edu), this returns the behaviour
      to pre e24d04e9bc5fda7722444b02fec135d8cc2ff488 but with the undefined
      fix still in place
    - refactor CGITempFile::find_tempdir to use File::Spec->tmpdir
      (related: RT #71799)
    - fix warnings when QUERY_STRING has empty key=value pairs (RT #54511)
    - pad custom 500 status response messages to > 512 for MSIE (RT #81946)
    - make Vars tied hash delete method return the value deleted from the hash
      making it act like perl's delete (RT #51020)

    [ TESTING ]
    - add .travis.yml (https://travis-ci.org)